loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: value t
t=true
^